添加hadoop 集群一键启动compose